tests/negative/runtime/countoccurrences_empty_needle/input.ci
void main(string[] args) {
    print(toString(countOccurrences("abc", "")) + "\n");
}
